Small spacing fixes

--- a/variables.css
+++ b/variables.css
@@ -29,9 +29,14 @@
     font-family: 'Patrick Hand SC', sans-serif;
   }
 
-  #comic-card {
+  
+  #content-container {
     padding-left: 2em;
     padding-right: 2em;
+  }
+  #comic-card {
+    padding-left: 1em;
+    padding-right: 1em;
   }
   #comic-content-container {
     display: table;
